packages/vue-notion/src/styles.css
/* ... */
.notion-page-icon-inline img {
  object-fit: cover;
}

.notion-page {
  box-sizing: border-box;
  width: var(--notion-max-width);
  /* padding-left: calc(min(16px, 8vw)); */
  /* padding-right: calc(min(16px, 8vw)); */
}

.notion-full-width {
  box-sizing: border-box;
  --notion-max-width: calc(min(1920px, 98vw));
  padding-left: calc(min(96px, 8vw));
  padding-right: calc(min(96px, 8vw));
}

.notion-small-text {
  font-size: 14px;
}

.notion-quote {
  display: block;
  width: 100%;
  white-space: pre-wrap;
  word-break: break-word;
  border-left: 3px solid currentcolor;
  padding: 0.2em 0.9em;
  margin: 6px 0;
  font-size: 1.2em;
}

.notion-hr {
  width: 100%;
  margin: 6px 0;
  padding: 0;
  border: none;
  border-bottom: 1px solid var(--bg-color-0);
}

.notion-link {
  color: inherit;
  word-break: break-word;
  text-decoration: inherit;
  border-bottom: 0.05em solid;
  border-color: var(--fg-color-2);
  opacity: 0.7;
  transition:
    border-color 100ms ease-in,
    opacity 100ms ease-in;
}

.notion-link:hover {
  border-color: var(--fg-color-6);
  opacity: 1;
}

.notion-collection .notion-link {
  opacity: 1;
}

.notion-blank {
  width: 100%;
  min-height: 1rem;
  padding: 3px 2px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.notion-page-link {
  display: flex;
  color: var(--fg-color);
  text-decoration: none;
  width: 100%;
  height: 30px;
  margin: 1px 0;
  transition: background 120ms ease-in 0s;
}

@media (max-width: 768px) {
  .notion-title {
    font-size: 1.75em;
  }
  .notion-h1 {
    font-size: 1.5em;
  }
  .notion-h2 {
    font-size: 1.3em;
  }
  .notion-h3 {
    font-size: 1.1em;
  }
}


.notion-page-link:hover {
  background: var(--bg-color-0);
}

.notion-collection-card .notion-page-link {
  height: unset;
  margin: 0;
  transition: unset;
}
.notion-collection-card .notion-page-link {
  background: unset;
}

.notion-icon {
  display: block;
  width: 18px;
  height: 18px;
  color: var(--fg-color-icon);
}

.notion-page-text {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  line-height: 1.3;
  border-bottom: 1px solid var(--fg-color-1);
  margin: 4px 0;
}

.notion-inline-code {
  color: #eb5757;
  padding: 0.2em 0.4em;
  background: var(--bg-color-2);
  border-radius: 3px;
  font-size: 85%;
  font-family:
    'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
}

.notion-inline-underscore {
  text-decoration: underline;
}

.notion-list {
  margin: 0;
  margin-block-start: 1px;
  margin-block-end: 1px;
}

.notion-list-disc {
  list-style-type: disc;
  padding-inline-start: 1.7em;
  margin-top: 0;
  margin-bottom: 0;
}
.notion-list-numbered {
  list-style-type: decimal;
  padding-inline-start: 1.6em;
  margin-top: 0;
  margin-bottom: 0;
}

.notion-list + .notion-list {
  margin-top: -6px;
}

.notion-list-disc li {
  padding-left: 0.1em;
}

.notion-list-numbered li {
  padding-left: 0.2em;
}

.notion-list li {
  padding: 2px 0;
  white-space: pre-wrap;
}

.notion-asset-wrapper {
  margin: 0.5rem 0;
  max-width: 100vw;
  min-width: 100%;
  align-self: center;
  display: flex;
  flex-direction: column;
}

.notion-asset-wrapper-image {
  max-width: 100%;
}

.notion-asset-wrapper-full {
  max-width: 100%;
}

.notion-asset-wrapper img {
  width: 100%;
  height: 100%;
  max-height: 100%;
  object-fit: contain !important;
}

.notion-asset-wrapper iframe {
  border: none;
  background: rgb(247, 246, 245);
}

.notion-text {
  width: 100%;
  white-space: pre-wrap;
  word-break: break-word;
  padding: 3px 2px;
  margin: 1px 0;
}

.notion-text:first-child {
  margin-top: 2px;
}

.notion-text-children {
  padding-left: 1.5em;
  display: flex;
  flex-direction: column;
}

.notion .notion-code {
  font-size: 85%;
}

.notion-code {
  position: relative;
  width: 100%;
  padding: 1em;
  margin: 4px 0;
  border-radius: 3px;
  tab-size: 2;
  display: block;
  box-sizing: border-box;
  overflow: auto;
  background: var(--bg-color-1);
  font-family:
    SFMono-Regular, Consolas, 'Liberation Mono', Menlo, Courier, monospace;
}

.notion-code-copy {
  position: absolute;
  top: 1em;
  right: 1em;
  user-select: none;
  z-index: 9;
  transition: opacity 0.2s cubic-bezier(0.3, 0, 0.5, 1);
}

.notion-code-copy-button {
  display: inline-block;
  padding: 0.6em;
  font-size: 1.25em;
  line-height: 1em;
  cursor: pointer;

  transition:
    background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1),
    color 0.2s cubic-bezier(0.3, 0, 0.5, 1),
    border-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
  box-shadow:
    0 1px 0 rgba(27, 31, 36, 0.04),
    inset 0 1px 0 rgba(255, 255, 255, 0.25);
  background-color: #f6f8fa;

  color: #24292f;
  border: 1px solid rgba(27, 31, 36, 0.15);
  border-radius: 6px;
}

.notion-code-copy-button:hover {
  background-color: #f3f4f6;
  border-color: rgba(27, 31, 36, 0.15);
  transition-duration: 0.1s;
}

.notion-code-copy-button:active {
  background: hsla(220, 14%, 93%, 1);
  border-color: rgba(27, 31, 36, 0.15);
  transition: none;
}

.notion-code .notion-code-copy {
  opacity: 0;
}

.notion-code:hover .notion-code-copy {
  opacity: 1;
}

.notion-code-copy-button svg {
  display: block;
}

.notion-code-copy-tooltip {
  pointer-events: none;
  position: absolute;
  bottom: -38px;
  left: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  z-index: 99;
  font-size: 14px;
}

.notion-code-copy-tooltip > div {
  padding: 6px 8px;
  background: #222;
  color: #fff;
  border-radius: 6px;
}

.notion-column {
  display: flex;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.notion-column > *:first-child {
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
}

.notion-column > *:last-child {
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;
}

.notion-row {
  display: flex;
  overflow: hidden;
  width: 100%;
  max-width: 100%;
}
/* ... */

